# pyscrelp

./: LICENSE  README.md  pyproject.toml
src/pyscrelp/: __init__.py  pyscrelp.py
